# intervals

./: .travis.yml  CMakeLists.txt  README.md  README.rst
ci/travis/: install-linux.sh  install-osx.sh
include/: active_segments.h  my_traits.h  property_generator.h  segment.h  stamps_accumulator.h  tagged_data.h  time_stamp.h  utils.h
src/: CMakeLists.txt  main.cpp  stamps_accumulator.inl
test/: CMakeLists.txt  intervals_test.cpp
